Hopefully fixed a crash